@@ -1,3 +1,12 @@
+2006-11-06 Borut Razem <borut.razem AT siol.net>
+
+	* lib/variables.mk: added default definitions for PREFIX and
+	  HOSTPREFIX
+	* components/sdcc.mk: removed --prefix=$(PREFIX) argument to configure
+	  command line, use $(HOSTPREFIX)
+	* local/x86-linux2-i586-mingw32msvc.mk: add --prefix=$(PREFIX) to
+	  SDCCCONFIGUREFLAGS
+
 2006-11-05 Borut Razem <borut.razem AT siol.net>
 
 	* components/sdcc.mk: added --prefix=$(PREFIX) argument to configure
@@ -13,7 +22,7 @@
 	  local/ucf-cf-ppc-macosx-2.mk, local/ucf-cf-ppc-linux-1.mk,
 	  local/ucf-cf-ppc-macosx-1.mk, local/ucf-cf-sparc-linux-1.mk,
 	  local/x86-linux1-i586-mingw32msvc.mk, local/x86-linux1.mk:
-	  removed unneded locals
+	  removed unneeded locals
 	* components/sdcc.mk: make _SDCCDIR local, removed /usr/local from
 	  host build directory
 	* lib/bootstrap.mk: use $(PREFIX)
